--- a/ProvaAv3_SAD.ipynb
+++ b/ProvaAv3_SAD.ipynb
@@ -4,9 +4,9 @@
   "metadata": {
     "colab": {
       "name": "ProvaAv3_SAD.ipynb",
-      "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -16,11 +16,21 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/luizafortes/gc-2019-2-av3/blob/master/ProvaAv3_SAD.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "reuEvXQklx3Z",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "DISCIPLINA: Gestão do Conhecimento \tPROFESSOR(A): Alex Salgado \n",
         " \n",
@@ -35,58 +45,63 @@
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "-AjMlE5Slx3d",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "## Questão 1 - valor (1,5)\n",
         "1.1 - Importar os modulos python para machine learn e carregar o arquivo pacotes-av3.xlsx usando o método read_excel do pandas"
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "zzv7qufwlx3h",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
-        ""
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "pacotes = pd.read_csv('pacotes.csv')\n",
+        "type(pacotes)"
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "bl-OxkXzlx3u",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "1.2 - Exibir os primeiros registros desta tabela"
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "W5fGgvVNlx3x",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
-        ""
+        "\n",
+        "\n",
+        "df.head(10)"
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "PCZSAexklx36",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "## Questão 2 - valor (1,5)\n",
         "Utilizando as terminologias de Machine Learning(features e observações):  \n",
@@ -94,12 +109,12 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "ph7yS0DWlx37",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         ""
       ],
@@ -107,22 +122,22 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "en8rJok0lx4A",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "2.2 - Quantas observações têm nessa base de dados?"
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "uxZNnkxglx4C",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         ""
       ],
@@ -130,23 +145,23 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "P1Wr8CNulx4G",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "## Questão 3 - valor (3,0)\n",
         "3.1 - Usando o algoritmo de KNN(11), qual a previsão? Adivinhe qual é o pacote com peso 787g, largura 86.8 cm, altura 18.88 cm, ou seja, com as seguintes features (peso = 787, largura=86.8, altura=18.88).\n"
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "KEbvOIMtlx4H",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         ""
       ],
@@ -154,11 +169,11 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "wc7IpI-xlx4N",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "## Questão 4 - valor (4,0)\n",
         "Usando o método de avaliação de acurácia ( Train/Test Split), Calcular a acurácia de cada um dos 3 métodos abaixo.  \n",
@@ -169,12 +184,12 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "uaidspMSlx4P",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         ""
       ],
@@ -182,22 +197,22 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "SWOBSfPXlx4S",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "4.2 - Acurácia usando o algoritmo de KNN (com 5 vizinho, k=7)"
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "bQv2hVRulx4T",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         ""
       ],
@@ -205,22 +220,22 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "vLF_1RsRlx4Y",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "4.3 - Acurácia usando o algoritmo de LogisticRegression"
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "onNHe7r4lx4Z",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         ""
       ],
@@ -228,21 +243,21 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "tEhjoBYnlx4e",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "4.4 - De acordo com seus resultados anteriores, qual dos 3 métodos é mais eficiente?"
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "c2JkFVY7lx4g",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         " "
       ]
